[package]
name = "tsil_cev"
version = "1.0.0"
authors = ["mov-rax-rbx"]
license = "MIT"
readme = "README.md"
description = "LinkedList on Vec"
repository = "https://github.com/mov-rax-rbx/TsilCev"
keywords = ["allocator", "no_std", "linked_list", "linear_memory"]
categories = ["data-structures", "algorithms", "no-std"]
edition = "2018"

[[bench]]
name = "bench"
harness = false

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
serde = { version = "^1.0", optional = true, default-features = false }

[dev-dependencies]
serde_json = "^1.0"
criterion = "^0.3.3"
